# jt-flow

./: .gitignore  CMakeLists.txt  Dockerfile  FlowLib.h  FlowLibShared.cpp  FlowLibShared.hpp  Main.cpp  README.md  docker-compose.yaml  vectorFrame.ocl
.github/workflows/: ci.yaml
FlowLib/: CMakeLists.txt  FlowLib.h  FlowLibShared.cpp  FlowLibShared.hpp  FlowLibStub.c
FlowLib/cuda/: FFmpegDemuxer.h  FlowLib.cpp  NvDecoder.cpp  NvDecoder.h  ReadFlow.cu  ReadFlow.h
FlowLib/lav/: FlowLib.cpp  Reader.cpp  Reader.hpp
FlowLib/src/: FlowLib.h  FlowLibShared.cpp  FlowLibShared.hpp  Main.cpp  SharedReader.hpp
Model/: jtmodel.ipynb  jtmodel.py  vectorFrame.ocl
Server/: index.mjs  package-lock.json  package.json
Server/src/: apiapp.mjs  db.mjs  flowlib.mjs  flowloader.mjs  index.mjs  ipfs.mjs  test.mjs
cuda/: FFmpegDemuxer.h  FlowLib.cpp  NvDecoder.cpp  NvDecoder.h  ReadFlow.cu  nv12_to_rgb.cu  nv12_to_rgb.h
jt-browser-ext/: manifest.json  package-lock.json  package.json  vite.config.js
jt-browser-ext/src/: Video.vue  background.js  ph_hook.js  style.css  video.js
jt-browser-ext/src/modules/: bp.js  config.js  db.js  flowmodel.js  jtsocket.js  tabs.js  utils.js
lav/: FlowLib.cpp  Reader.cpp
